# app/Http/Requests/Organization/ViewOrganization.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Http\Requests\Organization;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class ViewOrganization extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return false;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, mixed>
+     */
+    public function rules()
+    {
+        return [
+            //
+        ];
+    }
+}
