# app/Models/Organization.php
@@ -147,4 +147,17 @@ class Organization extends LaratrustTeam
         }
     }
 
+    public function viewOrganization($language='en',$slug)
+    {
+        try {
+            $organization_list=static::select('id','language','name','slug','description','cover_image','profile_image', 'website' ,'about', 'category', 'status', 'is_verified', 'magnet_community_id','total_employees')->where("slug","like",$slug)->take(20)->get();
+            if(!$organization_list->isEmpty()){
+                return $organization_list;
+            }
+            return false;
+        } catch (\Exception $e) {
+            return false;
+        }
+    }
+
 }
